# Lightweight-Speech-Denoising.axera

./: README.md
c_infer/: CMakeLists.txt  build_ax620l.sh  build_ax620q.sh  build_ax630c.sh  build_ax650.sh  build_x86.sh  download_bsp.sh  run_ax620l_all.sh  run_ax620q_all.sh  run_ax630c_all.sh  run_ax650_all.sh  run_x86_all.sh  run_x86_gtcrn.sh  toolchain_ax620l.cmake  toolchain_ax620q.cmake  toolchain_ax650.cmake
c_infer/inc/: ax_ai_se_denoise.h  ax_base_type.h
c_infer/lib/: tiny_se_v5_dsp.c  tiny_se_v5_dsp.h
c_infer/models/: conv_se_ax620l_config.ini  conv_se_ax620q_config.ini  conv_se_ax630c_config.ini  conv_se_ax650_config.ini  conv_se_context_config.ini  gtcrn_7input_ax620l_config.ini  gtcrn_7input_ax620q_config.ini  gtcrn_7input_ax630c_config.ini  gtcrn_7input_ax650_config.ini  gtcrn_7input_config.ini  tiny_v5_ax620l_config.ini  tiny_v5_ax620q_config.ini  tiny_v5_ax630c_config.ini  tiny_v5_ax650_config.ini  tiny_v5_context_config.ini
c_infer/src/: ax_ai_se_denoise.c  ax_ai_se_denoise_ax.c  test_cache_denoise.c  test_se_denoise_ax.c
model_convert/: README.md
model_convert/configs/: model_catalog.json
model_convert/export/: export_gtcrn_ax620e.py  export_gtcrn_ax650.py  export_self_models.py  fix_channel_align_ax620l.py  fix_dilation_expand_ax620l.py  generate_all.py  verify_all_onnx.py
model_convert/model_src/models/: __init__.py  conv_gtcrn_small_new.py  conv_gtcrn_small_new_v2.py  model_factory.py  tiny_conv_se_v5.py
model_convert/model_src/self_configs/: conv_se.yaml  tiny_v5.yaml
model_convert/python/: denoise_core.py  infer.py  infer_gtcrn_cache_onnx.py  requirements.txt
model_convert/quant/ax_configs/: config_conv_se_context_620E.json  config_conv_se_context_620L.json  config_conv_se_context_637.json  config_conv_se_context_650.json  config_gtcrn_no_scatter_less_input_optimized_620E.json  config_gtcrn_no_scatter_less_input_optimized_620L.json  config_gtcrn_no_scatter_less_input_optimized_637.json  config_gtcrn_no_scatter_less_input_optimized_650.json  config_tiny_v5_context_620E.json  config_tiny_v5_context_620L.json  config_tiny_v5_context_637.json  config_tiny_v5_context_650.json
